cli/nagare-dsl/test/golden/db-postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-main
  namespace: personal
  labels:
    nagare.dev/managed-by: nagarectl
    nagare.dev/database: pg-main
    nagare.dev/engine: postgres
spec:
  type: ClusterIP
  selector:
    nagare.dev/database: pg-main
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
