cli/nagare-dsl/test/golden/db-redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: personal
  labels:
    nagare.dev/managed-by: nagarectl
    nagare.dev/database: redis-cache
    nagare.dev/engine: redis
spec:
  type: ClusterIP
  selector:
    nagare.dev/database: redis-cache
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
