cli/nagare-dsl/test/golden/server-site.service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: notes-app
  namespace: personal
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: '1'
        autoscaling.knative.dev/max-scale: '3'
    spec:
      containers:
      - image: us-west1-docker.pkg.dev/tan-nb-exp/nagare/notes-app:20260607-120000
        ports:
        - containerPort: 8080
        env:
        - name: API_BASE
          value: https://api.example.com
        - name: HOSTNAME
          value: 0.0.0.0
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
