cli/nagare-dsl/test/golden/static-site.service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: notes
  namespace: personal
spec:
  template:
    spec:
      containers:
      - image: notes:20260607-120000
        ports:
        - containerPort: 8080
